# food-ops-copilot-sales

./: .env.template  .gitignore  Dockerfile  README.md  app.py  chat_history_manager.py  cloudbuild.yaml  config_loader.py  embedding_model.py  few_shot_info.txt  logger_context.py  logger_util.py  logging_config.yaml  main.py  preprocess_sales_final.py  prompt.py  pyproject.toml  reflection_agent.py  requirements_complete.txt  sales_schema_config.json  sales_schema_final.config  sql_agent.py  unified_config.yaml
